--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -45,7 +45,7 @@ import sole from "../assets/images/pageimages/Sole_full.png";
 <style>
     /* The navigation menu */
     .navbar {
-        overflow: hidden;
+        /* overflow: hidden;     */
         background-color: inherit;
     }
 
