--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,13 +21,15 @@ const { title } = Astro.props;
 
         <ClientRouter />
     </head>
-    <body class="flex flex-col min-h-screen bg-amber-50 mx-4 sm:mx-[9.5rem]">
+    <body
+        class="flex flex-col min-h-screen bg-amber-50 mx-4 sm:mx-[9.5rem]"
+    >
         <Navbar />
         <!-- <Rings /> -->
-        <main class="flex-grow">
+        <main class="flex-grow mb-20 md:mb-40">
             <slot />
         </main>
-        <footer class="bottom-0 w-full py-4 text-center">
+        <footer class="w-full py-4 text-center mt-auto">
             <div class="container">
                 &copy; {today.getFullYear()} Forró da Capita. All rights reserved.
             </div>
