--- a/src/pages/pa58.astro
+++ b/src/pages/pa58.astro
@@ -6,7 +6,7 @@ import pa58 from "../assets/images/pageimages/pa58.jpg";
 ---
 
 <Layout title="PA 58">
-	<div class="w-full h-screen mx-auto lg:px-0 lg:pt-15 pt-5">
+	<div class="mx-auto">
 		<h1 class="text-3xl font-merri font-semibold mb-5">PA 58</h1>
 		<div class="flex flex-col col-span-1 md:flex-row justify-between">
 			<div
